--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
 		<header сlass="page-header">
 			<div class="page-header__navigation">
 				<nav class="navigation">
-					<ul class="navigation__list">
+					<ul class="navigation__list clearfix">
 						<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Карта штата</a></li>
 						<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Информация</a></li>
 						<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Фото и видео</a></li>
