--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<header сlass="page-header">
 			<div class="page-header__navigation">
 				<nav class="navigation">
-					<ul class="navigation__list">
-						<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Карта штата</a></li>
+					<ul class="navigation__list clearfix">
+						<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Карта штата</a></li>
 						<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Информация</a></li>
-						<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Фото и видео</a></li>
+						<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Фото и видео</a></li>
 						<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Гостиницы</a></li>
 					</ul>
 					<a href="" class="navigation__close"></a>
@@ -29,10 +29,10 @@
 		<div class="main-intro">
 		</div>
 
-		<section class="reasons">
+		<section class="reasons clearfix">
 
 			<div class="reasons__header">
-				<h2 class="block__title">Седона - небольшой <br>городок в Аризоне, <br>заслуживающий большего!</h2>
+				<h2 class="block__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
 				<p class="block__text">Рассмотрим 5 причин по которым Седона круче чем Гранд Каньон!</p>
 			</div>
 
@@ -42,9 +42,9 @@
 				<p class="reasons__about reasons__about--light">Седона не атракцион для туристов, там течет своя жизнь</p>
 			</div>
 
-			<img src="img/motel.jpg" alt="" class="reasons__image" width="100%" height="auto">
+			<div class="reasons__image reasons__image--city"></div>
 
-			<div class="features">
+			<div class="features clearfix">
 				<div class="features__item">
 					<h2 class="features__title features__title--img-house">Жилье</h2>
 					<p class="features__about">Рекомендуем пожить в настоящем мотеле, все как в кино</p>
@@ -65,7 +65,7 @@
 				<p  class="reasons__about reasons__about--light">Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
 			</div>
 
-			<img src="img/bridge.jpg" alt="мост" class="reasons__image" width="100%" height="auto">
+			<div class="reasons__image reasons__image--bridge"></div>
 
 			<div class="reasons__item">
 				<h2 class="reasons__title">Небольшая площадь</h2>
@@ -88,8 +88,8 @@
 		</section>
 
 		<section class="hotel-search">
-			<h1 class="block__title">Заинтересовались?</h1>
-			<p class="block__text">Укажите предполагаемые даты поездки и покажем вам лучшие предложения гостиниц в седоне</p>
+			<h1 class="hotel-search__title">Заинтересовались?</h1>
+			<p class="hotel-search__text">Укажите предполагаемые даты поездки и покажем вам лучшие предложения гостиниц в седоне</p>
 			<a href="#" class="hotel-search__btn">Найти гостиницу</a>
 		</section>
 
