--- a/form.html
+++ b/form.html
@@ -191,7 +191,11 @@
 								<img width="100%" src="./img/img-gallery.png" alt="">
 							</div>
 							<div class="gallery__file">IMG-686.jpg</div>
-							<a href="" class="gallery__del-img"></a>
+							<a href="" class="gallery__del-img"><svg class="gallery__cross"version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="22.199px" height="22.199px" fill="#b8b8b8" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
+<polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 
+	22.199,19.396 13.903,11.1 "/>
+</svg></a>
 						</li>
 						
 						<li class="gallery__item">
