--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<div class="reasons__item reasons__item--light reasons__item--mask">
 				<h3 class="reasons__title reasons__title--light">Настоящий городок</h3>
-				<p class="reasons__num reasons__num--light">- #1 -</p>
+				<p class="reasons__num reasons__num--light">- №1 -</p>
 				<p class="reasons__about reasons__about--light">Седона не атракцион для туристов, там течет своя жизнь</p>
 			</div>
 
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 
-			<div class="reasons__item reasons__item--light">
+			<div class="reasons__item reasons__item--right reasons__item--light">
 				<h3 class="reasons__title reasons__title--light">Там есть мост дьявола</h3>
 				<p  class="reasons__num reasons__num--light">- №2 -</p>
 				<p  class="reasons__about reasons__about--light">Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
