--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>HTML Academy: sedona</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
 	<div class="container">
