add desktop index

--- a/form.html
+++ b/form.html
@@ -159,7 +159,7 @@
 				</div>
 			</div>	
 			<div class="hotel-form__item">
-				<h1 class="hotel-form__title">Посещенные достопримечательности:</h1>
+				<h1 class="hotel-form__title hotel-form__title--narrow">Посещенные достопримечательности:</h1>
 				<div class="flexbox--wrap">
 					<div class="hotel-form__boxcheck">
 						<input id="devil" type="checkbox" name="showplace" checked hidden>
