add hover,focus from counter, fix id

--- a/form.html
+++ b/form.html
@@ -47,7 +47,7 @@
 				</div>
 				<div class="hotel-form__field">
 				<label for="firstname" class="hotel-form__label hotel-form__label--req">Имя:</label>
-				<input class="hotel-form__input" id="lastname" type="text" required placeholder="Пётр">
+				<input class="hotel-form__input" id="firstname" type="text" required placeholder="Пётр">
 				</div>
 				<div class="hotel-form__field">
 				<label for="patronymic" class="hotel-form__label">Отчество:</label>
