add js from counter

--- a/form.html
+++ b/form.html
@@ -294,6 +294,6 @@
 				<div class="popup-ok__btn">Закрыть окно</div>
 			</div>
 		</div>
-
+	<script src="js/script.js"></script>
 </body>
 </html>
