--- a/index.html
+++ b/index.html
@@ -371,6 +371,6 @@
 			</a></div>
 		</footer>
 	</div>	
-	<!-- <script src="js/script.js"></script> -->
+	<script src="js/script.js"></script>
   </body>
 </html>
