--- a/form.html
+++ b/form.html
@@ -78,9 +78,8 @@
 				<input class="hotel-form__input" id="datein" type="text" placeholder="4 июля 2015" required>
 				</div>
 				<div class="hotel-form__field">
-				<label for="day-counter" class="hotel-form__label hotel-form__label--req hotel-form__label--mobile">Длительность пребывания:</label>
-				<label for="day-counter" class="hotel-form__label hotel-form__label--req hotel-form__label--tablet">Дней пребывания:</label>
-				<div class="counter">
+				<label for="day-counter" class="hotel-form__label hotel-form__label--req hotel-form__label--days no-js"></label>
+				<div class="counter no-js">
 					<a href="" class="counter__btn icon-minus"></a>
 						<div class="counter__display">
 							<input type="text" id="day-counter" class="counter__input" value="14">
@@ -96,12 +95,11 @@
 				</div>
 			</div>
 			
-			<div class="hotel-form__item">
+			<div class="hotel-form__item no-js">
 				<h1 class="hotel-form__title">Кол-во путешественников</h1>
 				<div class="flexbox flexbox--center">
 				<div class="hotel-form__field">
-				<label for="counter" class="hotel-form__label--mobile hotel-form__label hotel-form__label--req">Количество путешественников:</label>
-				<label for="counter" class="hotel-form__label--width hotel-form__label--tablet hotel-form__label hotel-form__label--req">Кол-во путешественников:</label>
+				<label for="counter" class="hotel-form__label--width hotel-form__label--travelers hotel-form__label hotel-form__label--req"></label>
 				<div class="travelerss__counter-wrap">
 					<div class="counter">
 						<a href="" class="counter__btn icon-minus"></a>
