add ajax request

--- a/form.html
+++ b/form.html
@@ -36,7 +36,7 @@
 		</section>
 
 
-		<form class="hotel-form" method="post" action="/echo">
+		<form class="hotel-form" name="hotel-form" method="post" action="/echo">
 			
 			<div class="hotel-form__item">
 				<h1 class="hotel-form__title">Представьтесь, пожалуйста:</h1>
