add open popup-ok

--- a/form.html
+++ b/form.html
@@ -283,7 +283,7 @@
 			<div class="popup-error__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</div>
 			<a href="" class="popup-error__btn">Ок</a>
 		</div>
-		<div class="popup-ok">
+		<div class="popup-ok popup-ok--hidden">
 			<div class="popup-ok__up">
 				<div class="popup-ok__title">Ваш отзыв отправлен</div>
 				<div class="popup-ok__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</div>
