add function new travelers

--- a/form.html
+++ b/form.html
@@ -101,10 +101,10 @@
 				<div class="hotel-form__field">
 				<label for="counter" class="hotel-form__label--width hotel-form__label--travelers hotel-form__label hotel-form__label--req"></label>
 				<div class="travelerss__counter-wrap">
-					<div class="counter">
+					<div class="counter" id="travelers-counter">
 						<a href="" class="counter__btn icon-minus"></a>
 						<div class="counter__display">
-							<input type="text" id="counter" class="counter__input" value="2">
+							<input type="text" id="counter" class="counter__input" value="0">
 							<div class="counter__right">чел.</div>
 						</div>
 						<a href="" class="counter__btn icon-plus"></a>
@@ -113,47 +113,28 @@
 				</div>
 				</div>
 				<div class="hotel-form__travelers-wrap">
-					<div class="travelers">
-						<div class="travelers__col-left">
-							<span class="hotel-form__label hotel-form__label--center">№</span>
-							<div class="travelers__num">1</div>
-						</div>
-						<div class="travelers__col-right flexbox">
-							<div class="hotel-form__field--small">
-							<label for="lastname#1" class="hotel-form__label hotel-form__label--req">Фамилия:</label>
-							<input type="text" id="lastname#1" class="hotel-form__input" required placeholder="Иванов">
+					<script id="travelers" type="text/html>
+						<div class="travelers">
+							<div class="travelers__col-left">
+								<span class="hotel-form__label hotel-form__label--center">№</span>
+								<div class="travelers__num">{{number}}</div>
 							</div>
-							<div class="hotel-form__field--small">
-							<label for="firstname#1" class="hotel-form__label hotel-form__label--req">Имя:</label>
-							<input type="text" id="firstname#1" class="hotel-form__input" required placeholder="Пётр">
-							</div>
-							<div class="hotel-form__field--small">
-							<label for="patronymic#1" class="hotel-form__label">Отчество:</label>
-							<input type="text" id="patronymic#1" class="hotel-form__input" placeholder="Александрович">
-							</div>
-						</div>
-					</div>
-
-					<div class="travelers">
-						<div class="travelers__col-left">
-							<span class="hotel-form__label hotel-form__label--center">№</span>
-							<div class="travelers__num">2</div>
-						</div>
-						<div class="travelers__col-right flexbox">
-							<div class="hotel-form__field--small">
-							<label for="lastname#2" class="hotel-form__label hotel-form__label--req">Фамилия:</label>
-							<input type="text" id="lastname#2" class="hotel-form__input" required placeholder="Иванов">
-							</div>
-							<div class="hotel-form__field--small">
-							<label for="firstname#2" class="hotel-form__label hotel-form__label--req">Имя:</label>
-							<input type="text" id="firstname#2" class="hotel-form__input" required placeholder="Пётр">
-							</div>
-							<div class="hotel-form__field--small">
-							<label for="patronymic#2" class="hotel-form__label">Отчество:</label>
-							<input type="text" id="patronymic#2" class="hotel-form__input" placeholder="Александрович">
+							<div class="travelers__col-right flexbox">
+								<div class="hotel-form__field--small">
+								<label for="lastname{{number}}" class="hotel-form__label hotel-form__label--req">Фамилия:</label>
+								<input type="text" id="lastname{{number}}" class="hotel-form__input" required placeholder="Иванов">
+								</div>
+								<div class="hotel-form__field--small">
+								<label for="firstname{{number}}" class="hotel-form__label hotel-form__label--req">Имя:</label>
+								<input type="text" id="firstname{{number}}" class="hotel-form__input" required placeholder="Пётр">
+								</div>
+								<div class="hotel-form__field--small">
+								<label for="patronymic{{number}}" class="hotel-form__label">Отчество:</label>
+								<input type="text" id="patronymic{{number}}" class="hotel-form__input" placeholder="Александрович">
+								</div>
 							</div>
 						</div>
-					</div>
+					</script>	
 				</div>
 			</div>	
 			<div class="hotel-form__item">
@@ -293,5 +274,6 @@
 			</div>
 		</div>
 	<script src="js/script.js"></script>
+	<script src="js/vendors/mustache.min.js"></script>
 </body>
 </html>
