--- a/form.html
+++ b/form.html
@@ -78,14 +78,14 @@
 				<input class="hotel-form__input" id="datein" type="text" placeholder="4 июля 2015" required>
 				</div>
 				<div class="hotel-form__field">
-				<label for="day-counter" class="hotel-form__label hotel-form__label--req hotel-form__label--days no-js"></label>
-				<div class="counter no-js">
-					<a href="" class="counter__btn icon-minus"></a>
+				<label for="day-counter" class="hotel-form__label hotel-form__label--req hotel-form__label--days"></label>
+				<div class="counter">
+					<a href="" class="counter__btn icon-minus  no-js"></a>
 						<div class="counter__display">
 							<input type="text" id="day-counter" class="counter__input" value="14">
 							<div class="counter__right">дн.</div>
 						</div>
-					<a href="" class="counter__btn icon-plus"></a>
+					<a href="" class="counter__btn icon-plus  no-js"></a>
 				</div>
 				</div>
 				<div class="hotel-form__field">
@@ -95,19 +95,19 @@
 				</div>
 			</div>
 			
-			<div class="hotel-form__item no-js">
+			<div class="hotel-form__item">
 				<h1 class="hotel-form__title">Кол-во путешественников</h1>
 				<div class="flexbox flexbox--center">
 				<div class="hotel-form__field">
 				<label for="counter" class="hotel-form__label--width hotel-form__label--travelers hotel-form__label hotel-form__label--req"></label>
 				<div class="travelerss__counter-wrap">
 					<div class="counter" id="travelers-counter">
-						<a href="" class="counter__btn icon-minus"></a>
+						<a href="" class="counter__btn icon-minus no-js"></a>
 						<div class="counter__display">
 							<input type="text" id="counter" class="counter__input" value="0">
 							<div class="counter__right">чел.</div>
 						</div>
-						<a href="" class="counter__btn icon-plus"></a>
+						<a href="" class="counter__btn icon-plus no-js"></a>
 					</div>
 				</div>
 				</div>
