fix bug validator

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<title>HTML Academy: sedona</title>
 	<link rel="stylesheet" href="css/style.css">
-	<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic&amp;subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
 	<div class="container">
-		<header сlass="page-header">
+		<header>
 			<div class="page-header__navigation">
 				<nav class="navigation">
 					<ul class="navigation__list clearfix">
@@ -28,25 +28,23 @@
 		</header>
 
 		<div class="main-intro">
-			<svg class="main-intro__text--welcome main-intro__text" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="187.663px" height="44.918px" viewBox="0 0 187.663 44.918" enable-background="new 0 0 187.663 44.918"
-	 xml:space="preserve">
-<g>
-	<path d="M27.712,0h7.708l-1.21,44.918H19.685L17.71,26.373l-1.975,18.545H1.146L0,0h7.645l0.637,37.152H9.11L13.888,0h7.581
-		l4.905,37.152h0.765L27.712,0z"/>
-	<path d="M59.563,37.152v7.766H38.667V0h20.896v7.7H46.312v10.844h10.575v7.7H46.312v10.908H59.563z"/>
-	<path d="M80.902,37.152v7.766H62.619V0h7.645v37.152H80.902z"/>
-	<path d="M97.146,28.362l7.708-1.797v13.604c0,2.567-2.166,4.749-4.714,4.749H88.672c-2.612,0-4.714-2.182-4.714-4.749V4.749
-		C83.958,2.117,86.061,0,88.672,0h11.467c2.548,0,4.714,2.117,4.714,4.749v9.112l-7.708,1.796V7.7h-5.543v29.452h5.543V28.362z"/>
-	<path d="M125.619,0c2.548,0,4.714,2.117,4.714,4.749v35.42c0,2.567-2.166,4.749-4.714,4.749h-11.468
-		c-2.611,0-4.714-2.182-4.714-4.749V4.749c0-2.631,2.103-4.749,4.714-4.749H125.619z M122.625,7.7h-5.543v29.452h5.543V7.7z"/>
-	<path d="M155.366,0h7.581v44.918h-7.645V22.844l-3.058,11.422h-7.454l-2.994-11.422v22.074h-7.645V0h7.581l6.816,21.688L155.366,0z
-		"/>
-	<path d="M187.663,37.152v7.766h-20.896V0h20.896v7.7h-13.251v10.844h10.575v7.7h-10.575v10.908H187.663z"/>
-</g>
-</svg>
+			<svg class="main-intro__text--welcome main-intro__text" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="187.663px" height="44.918px" viewBox="0 0 187.663 44.918" enable-background="new 0 0 187.663 44.918"	xml:space="preserve">
+			<g>
+				<path d="M27.712,0h7.708l-1.21,44.918H19.685L17.71,26.373l-1.975,18.545H1.146L0,0h7.645l0.637,37.152H9.11L13.888,0h7.581
+					l4.905,37.152h0.765L27.712,0z"/>
+				<path d="M59.563,37.152v7.766H38.667V0h20.896v7.7H46.312v10.844h10.575v7.7H46.312v10.908H59.563z"/>
+				<path d="M80.902,37.152v7.766H62.619V0h7.645v37.152H80.902z"/>
+				<path d="M97.146,28.362l7.708-1.797v13.604c0,2.567-2.166,4.749-4.714,4.749H88.672c-2.612,0-4.714-2.182-4.714-4.749V4.749
+					C83.958,2.117,86.061,0,88.672,0h11.467c2.548,0,4.714,2.117,4.714,4.749v9.112l-7.708,1.796V7.7h-5.543v29.452h5.543V28.362z"/>
+				<path d="M125.619,0c2.548,0,4.714,2.117,4.714,4.749v35.42c0,2.567-2.166,4.749-4.714,4.749h-11.468
+					c-2.611,0-4.714-2.182-4.714-4.749V4.749c0-2.631,2.103-4.749,4.714-4.749H125.619z M122.625,7.7h-5.543v29.452h5.543V7.7z"/>
+				<path d="M155.366,0h7.581v44.918h-7.645V22.844l-3.058,11.422h-7.454l-2.994-11.422v22.074h-7.645V0h7.581l6.816,21.688L155.366,0z
+					"/>
+				<path d="M187.663,37.152v7.766h-20.896V0h20.896v7.7h-13.251v10.844h10.575v7.7h-10.575v10.908H187.663z"/>
+			</g>
+			</svg>
 
-<svg class="main-intro__text--tothegorgeous main-intro__text" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg class="main-intro__text--tothegorgeous main-intro__text" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="255.917px" height="28.91px" viewBox="0 0 255.917 28.91" enable-background="new 0 0 255.917 28.91" xml:space="preserve">
 <g>
 	<path d="M63.999,14.454l-0.202,0.23c-1.353,1.468-3.023,2.188-4.521,2.217l2.822-4.866c1.814-3.138,0.144-6.104-2.678-6.104
@@ -106,7 +104,7 @@
 <rect x="227" y="11.275" width="28.918" height="1.958"/>
 </svg>
 
-		<svg class="main-intro__text--sedona main-intro__text" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		<svg class="main-intro__text--sedona main-intro__text" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="459.755px" height="79.804px" fill="#fff" viewBox="0 0 459.755 79.804" enable-background="new 0 0 459.755 79.804"
 	 xml:space="preserve">
 <g>
@@ -127,7 +125,7 @@
 </g>
 </svg>
 
-<svg class="main-intro__text--becausecanyon main-intro__text" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg class="main-intro__text--becausecanyon main-intro__text" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="293.826px" height="79.393px" viewBox="0 0 293.826 79.393" enable-background="new 0 0 293.826 79.393"
 	 xml:space="preserve">
 <g>
@@ -347,7 +345,7 @@
 			<a href="#" class="hotel-search__btn">Найти гостиницу</a>
 		</section>
 
-		<section class="map"></section>
+		<div class="map"></div>
 
 		<footer class="page-footer">
 			<div class="page-footer__hash">#visitsedona</div>
@@ -359,7 +357,7 @@
 				</ul>
 			</div>
 			<div class="page-footer__copyright">Разработано<a href="http://htmlacademy.ru" class="page-footer__link">
-				<svg version="1.0" id="Layer_1" class="page-footer__academy" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+				<svg class="page-footer__academy" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
 <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334
 	l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5
