add field date live type TEXT

--- a/form.html
+++ b/form.html
@@ -75,7 +75,7 @@
 				<div class="flexbox">
 				<div class="hotel-form__field">
 				<label for="datein" class="hotel-form__label">Дата приезда:</label>
-				<input class="hotel-form__input" id="datein" type="date" placeholder="4 июля 2015" required>
+				<input class="hotel-form__input" id="datein" type="text" placeholder="4 июля 2015" required>
 				</div>
 				<div class="hotel-form__field">
 				<label for="day-counter" class="hotel-form__label hotel-form__label--req hotel-form__label--days"></label>
@@ -90,7 +90,7 @@
 				</div>
 				<div class="hotel-form__field">
 				<label for="dateout" class="hotel-form__label">Дата отъезда:</label>
-				<input class="hotel-form__input" id="dateout" type="date" placeholder="28 июля 2015" required>
+				<input class="hotel-form__input" id="dateout" type="text" placeholder="28 июля 2015" required>
 				</div>
 				</div>
 			</div>
@@ -276,6 +276,6 @@
 	</div>	
 	<script src="js/script.js"></script>
 	<script src="js/vendors/mustache.min.js"></script>
-	<script src="js/vendors/moment.min.js"></script>
+	<script src="js/vendors/moment-with-locales.min.js"></script>
 </body>
 </html>
